# authix

./: .env  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: docker-build.yml  docker-push.yml  lint.yml  package.yml  tests.yml
docker/: Dockerfile  redis.Dockerfile  redis.conf
make/: ci.mk  common.mk  run.mk  test.mk
scripts/: performance
src/auth_service/: api.py  asgi.py  router.py
src/auth_service/core/: config.py  security.py  service_container.py
src/auth_service/data/: query_exceptions.py
src/auth_service/data/refresh/: in_memory_refresh_queries.py  redis_refresh_queries.py  refresh_queries.py
src/auth_service/data/refresh_token/queries/: redis.py
src/auth_service/data/revocation/queries/: in_memory.py  interface.py  redis.py
src/auth_service/data/revoke/: redis_revoke_queries.py
src/auth_service/data/users/: in_memory_user_query.py  user_model.py  user_queries.py
src/auth_service/data/users/queries/: in_memory.py  interface.py
src/auth_service/domain/: authentication_service.py  client_implementation_service.py  registration_service.py  revocation_service.py  token_service.py
src/auth_service/domain/authentication/: service.py
src/auth_service/domain/client/: service.py
src/auth_service/domain/key/: service.py
src/auth_service/domain/registration/: service.py
src/auth_service/domain/revocation/: service.py
src/auth_service/domain/token/: service.py
src/authix/: api.py  asgi.py  router.py
src/authix/core/: config.py  service_container.py
src/authix/data/: query_exceptions.py
src/authix/data/refresh_token/: refresh_token_queries.py
src/authix/data/refresh_token/queries/: in_memory.py  redis.py
src/authix/data/revocation/queries/: in_memory.py  redis.py
src/authix/data/users/: model.py  user_queries.py
src/authix/data/users/queries/: in_memory.py  interface.py  mongodb.py
src/authix/domain/: device_id.py  domain_exceptions.py
src/authix/domain/authentication/: service.py
src/authix/domain/client/: service.py
src/authix/domain/key/: service.py
src/authix/domain/password_validation/: password_validator.py  validator.py
src/authix/domain/password_validation/validators/: ascii_only.py  max_length.py  min_digits.py  min_length.py  min_lowercase.py  min_special_symbols.py  min_uppercase.py
src/authix/domain/registration/: service.py
src/authix/domain/revocation/: event.py  publisher.py  service.py
src/authix/domain/revocation/publishers/: kafka_publisher.py
src/authix/domain/token/: password_hashing_strategy.py  service.py
src/authix/domain/token/password_hashing_strategies/: argon_id.py  bcrypt.py
src/authix/endpoints/: access_token.py  create_access_token.py  email_password_request.py  login.py  logout.py  public_key.py  register.py
tests/: service_container.py
tests/integration_tests/: conftest.py  helpers.py  test_authentication.py  test_registration.py  test_revocation.py  test_router.py
tests/unit_tests/: conftest.py  greet_test.py  test_authentication.py  test_registration.py  test_revocation.py
tests/unit_tests/test_password_validation/: test_ascii_only_validator.py  test_max_length_validator.py  test_min_length_validator.py  test_min_lowercase_validator.py  test_min_uppercase_validator.py  test_special_symbols_validator.py
