[metadata]
name = auth_service
url = "https://github.com/nymann/auth-service"
maintainer = Kristian Nymann Jakobsen
maintainer_email = kristian@nymann.dev
description = Auth Service
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.10
setup_requires =
    pytest-runner
install_requires =
    redis
    fastapi >= 0.79,<1.0.0
    passlib[bcrypt]
    python-jose[cryptographpy]

[options.extras_require]
all =
    %(dev)s
    %(tests)s
dev =
    add-trailing-comma
    black
    devtools[pygmentz]
    isort
    mypy
    nitpick
    python-dotenv
    types-redis
    types-python-jose
    types-passlib
    unicorn
    wemake-python-styleguide
    uvicorn
tests =
    pytest
    pytest-cov
    pytest-mock

[options.packages.find]
where = src


[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = true
omit = src/auth_service/version.py
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
docstring-style = google
format = wemake
ignore =
    D100,D101,D102,D103,D104,D105,D106,D107,
    H601,
    WPS305,WPS306,WPS431,WPS615
max-complexity = 6
max-line-length = 120
show-source = True
strictness = long
inline-quotes = double
per-file-ignores =
    src/auth_service/core/version.py:WPS411
    tests/**.py:WPS218,WPS432,WPS442,S101,src/**/version.py:WPS410

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_single_line = True
force_sort_within_sections = True
include_trailing_comma = True
lexicographical = True
line_length = 120
multi_line_output = 3
single_line_exclusions = typing
src_paths = src,tests

[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = False
implicit_reexport = False
local_partial_types = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
