[metadata]
name = authix
url = https://github.com/nymann/authix
maintainer = Kristian Nymann Jakobsen
maintainer_email = kristian@nymann.dev
description = Authix - Authentication as a service
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.10
setup_requires =
    pytest-runner
install_requires =
    argon2-cffi
    bcrypt
    confluent_kafka
    fastapi >= 0.79,<1.0.0
    pogo_api >= 0.0.2
    pydantic-settings
    jwt
    pymongo
    redis

[options.extras_require]
all =
    %(dev)s
    %(tests)s
dev =
    add-trailing-comma
    black
    devtools[pygmentz]
    isort
    mypy
    nitpick
    types-redis
    types-python-jose
    types-passlib
    unicorn
    wemake-python-styleguide
    uvicorn
tests =
    httpx
    python-dotenv
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio

[options.packages.find]
where = src


[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing

[coverage:run]
branch = true
omit =
    src/authix/version.py
    src/authix/api.py
    src/authix/asgi.py
    src/authix/**/interface.py

source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
docstring-style = google
format = wemake
ignore =
    D100,D101,D102,D103,D104,D105,D106,D107,
    H601,
    WPS305,WPS306,WPS323,WPS329,WPS431,WPS432,WPS615
max-complexity = 6
max-line-length = 120
show-source = True
strictness = long
inline-quotes = double
per-file-ignores =
    src/authix/version.py:WPS411,WPS410
    src/authix/endpoints/*.py:B008,WPS404
    tests/**.py:WPS118,S101,S106,S105,WPS442,WPS441,WPS100

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_single_line = True
force_sort_within_sections = True
include_trailing_comma = True
lexicographical = True
line_length = 120
multi_line_output = 3
single_line_exclusions = typing
src_paths = src,tests

[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
